Finalicé las validaciones y test de reservas, agregando todo lo necesario en horarios para poder lograr todas las validaciones